Add Domain Validation

--- a/demo/index.html
+++ b/demo/index.html
@@ -57,6 +57,11 @@
         <gig-input type="slug" name="slug" class="input" placeholder="Escribe un slug" required></gig-input>
     </div>
 
+    <div class="field">
+        <label>Input domain</label>
+        <gig-input type="domain" name="domain" class="input" placeholder="Escribe un dominio" required></gig-input>
+    </div>
+
 
 
 
