--- a/demo/index.html
+++ b/demo/index.html
@@ -62,6 +62,11 @@
         <gig-input type="domain" name="domain" class="input" placeholder="Escribe un dominio" required></gig-input>
     </div>
 
+    <div class="field">
+        <label>Input email</label>
+        <gig-input type="email" name="email" class="input" placeholder="Escribe un email" required></gig-input>
+    </div>
+
 
 
 
