--- a/gig-input.html
+++ b/gig-input.html
@@ -1,66 +1,10 @@
 <!--
  Webcomponents to manage input
- @version v0.0.16 - 2016-01-25
+ @version v0.0.17 - 2016-01-25
  @link https://github.com/gigigo-html5/gig-input
  @author Pedro José Peña Jerez <pedro.jose@gigigo.com>
  @license MIT License, http://www.opensource.org/licenses/MIT
  -->
-
-<link href="../polymer/polymer.html">
-<script src="../pikaday-time/pikaday.js"></script>
-<script src="../moment/moment.js"></script>
-<script src="../moment/locale/es.js"></script>
-<link rel="stylesheet" href="../pikaday-time/css/pikaday.css">
-
-
-<script>
-    Polymer.GigInputDateBehavior = {
-        enableDate: function() {
-            self = this;
-
-            if (this.type == 'datetime') {
-                this.showTime = true;
-            } else {
-                this.showTime = false;
-            }
-
-            moment.locale(self.lang);
-
-            var picker = new Pikaday({
-                showTime: this.showTime,
-                use24hour: true,
-                field: this.$.input,
-                format: this.formatDate,
-                position: 'bottom left',
-                reposition: false,
-                minDate: this.minDate,
-                i18n: {
-                    previousMonth : 'Previous Month',
-                    nextMonth     : 'Next Month',
-                    months        : moment.localeData()._months,
-                    weekdays      : moment.localeData()._weekdays,
-                    weekdaysShort : moment.localeData()._weekdaysShort
-                },
-                onSelect: function (date) {
-                    self.$.input.value = moment(date).format(self.formatDate);
-                }
-            });
-
-        },
-        properties: {
-            formatDate: {
-                type: String,
-                notify: true
-            },
-            minDate: {
-                type: Date,
-                value: null
-            }
-        }
-
-    }
-</script>
-
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../iron-overlay-behavior/iron-overlay-backdrop.html">
 <link rel="import" href="gig-input-date-behavior.html">
@@ -418,6 +362,7 @@
                     this.invalid = false;
                     this.maxLengthShow = false;
                     this._getValidity();
+                    this.fire('blur');
                 },
                 validateDomain: function(value) {
                     if (/^[a-zA-Z0-9][a-zA-Z0-9-]{1,61}[a-zA-Z0-9](?:\.[a-zA-Z]{2,})+$/.test(value)){
