--- a/demo/index.html
+++ b/demo/index.html
@@ -67,6 +67,16 @@
         <gig-input type="email" name="email" class="input" placeholder="Escribe un email" required></gig-input>
     </div>
 
+    <div class="field">
+        <label>Input tags</label>
+        <gig-input type="tags" name="tags" class="input" placeholder="Escribe una etiqueta" required></gig-input>
+    </div>
+
+
+    <div class="field">
+        <label>Input tags with value</label>
+        <gig-input type="tags" name="tags" class="input" placeholder="Escribe una etiqueta" value="Prueba,hola" required></gig-input>
+    </div>
 
 
 
