Update Domain Validation && Listener Change

--- a/demo/gig-input.html
+++ b/demo/gig-input.html
@@ -419,7 +419,7 @@
                     this.fire('blur');
                 },
                 validateDomain: function(value) {
-                    if (/^[a-zA-Z0-9][a-zA-Z0-9-]{1,61}[a-zA-Z0-9](?:\.[a-zA-Z]{2,})+$/.test(value)){
+                    if (/\b((xn--)?[a-z0-9]+(-[a-z0-9]+)*\.)+[a-z]{2,}\b/.test(value)){
                         this.errorMessage = null;
                         return true;
                     } else {
@@ -522,8 +522,8 @@
                         this.typeFormat = this.type;
                     }
                 },
-                changeValue: function(value) {
-                    this.fire('change');
+                changeValue: function(e, detail) {
+                    this.fire('change', {value: this.value});
                 },
                 tagEvent: function(e) {
                     if (e.keyCode == 13) {
