--- a/src/gig-input.html
+++ b/src/gig-input.html
@@ -1,11 +1,11 @@
-<link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../iron-overlay-behavior/iron-overlay-backdrop.html">
+<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/iron-overlay-behavior/iron-overlay-backdrop.html">
 <link rel="import" href="gig-input-date-behavior.html">
 <link rel="import" href="gig-input-color-behavior.html">
-<link rel="import" href="../gig-icon/gig-icon.html">
-<link rel="import" href="../iron-icon/iron-icon.html">
-<link rel="import" href="../iron-validatable-behavior/iron-validatable-behavior.html">
-<link rel="import" href="../iron-form-element-behavior/iron-form-element-behavior.html">
+<link rel="import" href="../bower_components/gig-icon/gig-icon.html">
+<link rel="import" href="../bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="../bower_components/iron-validatable-behavior/iron-validatable-behavior.html">
+<link rel="import" href="../bower_components/iron-form-element-behavior/iron-form-element-behavior.html">
 
 <dom-module id="gig-input">
 
@@ -173,7 +173,22 @@
            border-right: 1px solid #e4eaec;
        }
 
-       .field-group span.icon iron-icon {
+       .field-group span.btn-icon {
+           width: 36px;
+           height: 36px;
+           padding: 0;
+           cursor: pointer;
+           border-bottom-left-radius: 0;
+           border-top-left-radius: 0;
+           border-bottom-right-radius: 3px;
+           border-top-right-radius: 3px;
+           border-left: 0;
+           border-color: #46be8a;
+           background: #46be8a;
+           color: white;
+       }
+
+       .field-group span.icon iron-icon, .field-group span.btn-icon iron-icon {
            width: 17px;
        }
 
@@ -234,10 +249,11 @@
            color: #000;
        }
 
+
    </style>
 
    <template>
-       <div class="field-group" class$="[[getClassGroup(icon, group, type)]]">
+       <div class="field-group" class$="[[getClassGroup(icon, group, type, buttonIcon)]]">
 
            <template is="dom-if" if="[[group]]">
                <span>[[group]]</span>
@@ -265,6 +281,10 @@
 
           <template is="dom-if" if="[[icon]]">
               <span class="icon"><iron-icon icon$="[[getClassIcon(icon)]]"></iron-icon></span>
+          </template>
+
+          <template is="dom-if" if="[[buttonIcon]]">
+              <span class="btn-icon" icon="[[buttonIcon]]" on-click="iconHandler"><iron-icon icon$="[[getClassIcon(buttonIcon)]]"></iron-icon></span>
           </template>
 
           <template is="dom-if" if="[[checkColor(type)]]">
@@ -311,18 +331,11 @@
    <script>
        (function() {
 
-           var self;
-
-           function validateEmail(email) {
-               var re = /^([\w-]+(?:\.[\w-]+)*)@((?:[\w-]+\.)*\w[\w-]{0,66})\.([a-z]{2,6}(?:\.[a-z]{2})?)$/i;
-               return re.test(email);
-           }
-
            Polymer({
                is: 'gig-input',
                behaviors: [
-                   Polymer.GigInputDateBehavior,
-                   Polymer.GigInputColorBehavior,
+                   GigInputDateBehavior,
+                   GigInputColorBehavior,
                    Polymer.IronFormElementBehavior,
                    Polymer.IronValidatableBehavior
                ],
@@ -353,6 +366,9 @@
                        return this.value != '';
                    }
                },
+               iconHandler: function() {
+                   this.$.input.click();
+               },
                focusInput: function() {
                    this.$.input.focus();
                },
@@ -361,10 +377,10 @@
                        this.enableColor();
                    }
                },
-               getClassGroup: function(icon, group, type) {
+               getClassGroup: function(icon, group, type, btnIcon) {
                    var classList = 'field-group';
 
-                   if (icon || type == 'color') {
+                   if (icon || type == 'color' || btnIcon) {
                        classList += ' group-icon';
                    }
 
@@ -392,7 +408,7 @@
                    return classList;
                },
                keyupEvent: function (event) {
-                   self = this;
+                   var self = this;
                    switch(this.type) {
                        case 'slug':
                            self.value = self._generatorSlug(self.$.input.value)
@@ -530,6 +546,7 @@
                        this.generateTags(e.target.value);
                         e.target.value = null;
                         e.preventDefault();
+                        e.stopPropagation();
                    }
 
                },
@@ -546,6 +563,7 @@
                    this.value = this.tags.toString();
 
                    e.preventDefault();
+                   e.stopPropagation();
                },
                checkTags: function(value) {
                    if (value) {
@@ -619,6 +637,10 @@
                        notify: true
                    },
                    icon: {
+                       type: String,
+                       value: null
+                   },
+                   buttonIcon: {
                        type: String,
                        value: null
                    },
