--- a/src/gig-input-date-behavior.html
+++ b/src/gig-input-date-behavior.html
@@ -1,12 +1,12 @@
-<link href="../polymer/polymer.html">
-<script src="../pikaday-time/pikaday.js"></script>
-<script src="../moment/moment.js"></script>
-<script src="../moment/locale/es.js"></script>
-<link rel="stylesheet" href="../pikaday-time/css/pikaday.css">
+<link href="../bower_components/polymer/polymer.html">
+<script src="../bower_components/pikaday-time/pikaday.js"></script>
+<script src="../bower_components/moment/moment.js"></script>
+<script src="../bower_components/moment/locale/es.js"></script>
+<link rel="stylesheet" href="../bower_components/pikaday-time/css/pikaday.css">
 
 
 <script>
-    Polymer.GigInputDateBehavior = {
+    GigInputDateBehavior = {
         enableDate: function() {
             self = this;
 
@@ -18,7 +18,7 @@
 
             moment.locale(self.lang);
 
-            var picker = new Pikaday({
+            this.picker = new Pikaday({
                 showTime: this.showTime,
                 use24hour: true,
                 field: this.$.input,
@@ -35,6 +35,12 @@
                 },
                 onSelect: function (date) {
                     self.$.input.value = moment(date).format(self.formatDate);
+                },
+                onOpen: function() {
+                    this.pickerShow = true;
+                },
+                onClose: function() {
+                    this.pickerShow = false;
                 }
             });
 
@@ -47,6 +53,10 @@
             minDate: {
                 type: Date,
                 value: null
+            },
+            pickerShow: {
+                type: Boolean,
+                value: false
             }
         }
 
